# desktop-tools

./: .eslintrc.json  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
scripts/: scan_english.cjs
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  main.rs
src-tauri/src/commands/: cards.rs  category.rs  directory.rs  env_var.rs  mod.rs  shortcuts.rs  system.rs  wallpaper.rs  window.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/gpu/: amd.rs  mod.rs  nvidia.rs  wmi.rs
src-tauri/src/models/: shortcuts.rs
src-tauri/src/services/: category.rs  directory.rs  env_var.rs  mod.rs  wallpaper.rs
src/api/: category.ts  directory.ts  envVar.ts  systemInfo.ts  tauri.ts  wallpaper.ts
src/components/: FileItem.tsx
src/hooks/: useSmartInterval.ts  useSystemMonitor.ts  useTheme.ts
src/pages/: DesktopCardsPage.tsx  EnvVarPage.tsx  HomePage.tsx  QuicklyGoPage.tsx  SettingsPage.tsx  SystemInfoPage.tsx  ToolboxPage.tsx  WidgetPage.tsx
src/services/: shortcuts.ts
src/stores/: cardStore.test.ts  cardStore.ts  categoryStore.ts  resourceStore.ts  settingsStore.ts  shortcutStore.ts  wallpaperStore.ts
src/styles/: QuicklyGoPage.scss  env-var.scss  main.scss  settings.scss  system-info.scss  variables.scss
src/types/: index.ts  shortcuts.ts  tauri-dialog.d.ts  wallpaper.ts
src/utils/: autoStart.ts  system-format.test.ts  system-format.ts  systemTray.ts
(+32 files in other folders)
