[package]
name = "local-resource-manager"
version = "1.0.0"
description = "本地系统资源管理软件"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.29", features = ["bundled"] }
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
log = "0.4"
argon2 = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
wallpaper = "3"
tauri-plugin-fs = "2"
sysinfo = { version = "0.30" }
once_cell = "1"
open = "5.3.3"
anyhow = "1.0.100"
tauri-plugin-opener = "2.5.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
scraper = "0.18"
regex = "1.10"

[target.'cfg(target_os = "windows")'.dependencies]
wmi = { version = "0.12" }
nvml-wrapper = "0.11"
